--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,5 +1,3 @@
-@import "styles.scss";
-
 header {
   display: flex;
   flex-direction: row;
@@ -68,7 +66,7 @@ main {
     align-items: center;
     margin-top: 12px;
     /*background-color: $color-primary;*/
-    padding-left: 9px;
+    padding-left: 13px;
     /*padding: 13px 9px;*/
     height: 69px;
     /*transform-origin: left 20%;
@@ -137,7 +135,7 @@ main {
     &:hover,
     &:focus {
       padding: 0;
-      padding-left: 9px;
+      padding-left: 13px;
       .entries__list__card__price,
       .plats__list__card__price,
       .desserts__list__card__price {
@@ -198,6 +196,9 @@ main {
         overflow: unset;
         text-overflow: unset;
       }
+      .ft-s {
+        font-size: 17.8px;
+      }
       /*padding-left: 10px;*/
     }
     &:hover {
@@ -210,6 +211,76 @@ main {
         width: 200px;
       }
     }
+  }
+}
+
+@keyframes color-animation-heart {
+  0% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.15;
+    background-clip: text;
+    color: transparent;
+  }
+  50% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.5;
+    background-clip: text;
+    color: transparent;
+    animation-timing-function: cubic-bezier(0.27, 0.68, 0.84, 0.08);
+  }
+  100% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 1;
+    background-clip: text;
+    color: transparent;
+  }
+}
+
+.empty-heart {
+  color: grey;
+}
+.full-heart {
+  display: none;
+}
+
+.heart-icon {
+  transition: color 0.3s;
+
+  &:hover {
+    .empty-heart {
+      display: none;
+      height: 32px;
+    }
+
+    .full-heart {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 32px;
+      animation: color-animation-heart 0.3s forwards;
+    }
+  }
+}
+
+@keyframes button-animation {
+  0% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.925;
+    @include box-shadow(0 4px 9px 0 rgba(0, 0, 0, 0.2));
+    transform: scale(1.0125);
+    animation-timing-function: cubic-bezier(0.15, 1.14, 0.5, 0.15);
+  }
+  100% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.8;
+    @include box-shadow(0 4px 9px 0 rgba(0, 0, 0, 0.2));
+    /*animation-duration: 2s;*/
+    transform: scale(1.025);
   }
 }
 
@@ -227,6 +298,10 @@ main {
     color: #ffffff;
     border: none;
     @include box-shadow(0 4px 4px 0 rgba(0, 0, 0, 0.2));
+    &:hover {
+      animation: button-animation 0.4s forwards;
+      cursor: pointer;
+    }
   }
 }
 
