--- a/sass/styles.css
+++ b/sass/styles.css
@@ -53,6 +53,74 @@ header {
   padding-right: 10px;
 }
 
+@keyframes color-animation-heart {
+  0% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.15;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+  }
+  50% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.5;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    animation-timing-function: cubic-bezier(0.27, 0.68, 0.84, 0.08);
+  }
+  100% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 1;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+  }
+}
+@keyframes button-animation {
+  0% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.925;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    transform: scale(1.0125);
+    animation-timing-function: cubic-bezier(0.15, 1.14, 0.5, 0.15);
+  }
+  100% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.8;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    /*animation-duration: 2s;*/
+    transform: scale(1.025);
+  }
+}
+.empty-heart {
+  color: grey;
+}
+
+.full-heart {
+  display: none;
+}
+
+.heart-icon {
+  transition: color 0.3s;
+}
+.heart-icon:hover .empty-heart {
+  display: none;
+  height: 32px;
+}
+.heart-icon:hover .full-heart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  animation: color-animation-heart 0.3s forwards;
+}
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -62,9 +130,6 @@ header {
   background-color: #f7f7f7;
   opacity: 0.8;
   padding-bottom: 50px;
-  /*.hero__button:hover {
-    background: linear-gradient(360deg, #ff79da, #9356dc);
-  }*/
 }
 .hero p {
   max-width: 315px;
@@ -82,6 +147,9 @@ header {
   margin-top: 15px;
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+}
+.hero__button:hover {
+  animation: button-animation 0.4s forwards;
 }
 
 .fonctionnement {
