--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,4 @@
 //Variables
-
 $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
@@ -67,6 +66,75 @@ header {
   }
 }
 
+@keyframes color-animation-heart {
+  0% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.15;
+    background-clip: text;
+    color: transparent;
+  }
+  50% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.5;
+    background-clip: text;
+    color: transparent;
+    animation-timing-function: cubic-bezier(0.27, 0.68, 0.84, 0.08);
+  }
+  100% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 1;
+    background-clip: text;
+    color: transparent;
+  }
+}
+@keyframes button-animation {
+  0% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.925;
+    @include box-shadow(0 4px 9px 0 rgba(0, 0, 0, 0.2));
+    transform: scale(1.0125);
+    animation-timing-function: cubic-bezier(0.15, 1.14, 0.5, 0.15);
+  }
+  100% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.8;
+    @include box-shadow(0 4px 9px 0 rgba(0, 0, 0, 0.2));
+    /*animation-duration: 2s;*/
+    transform: scale(1.025);
+  }
+}
+
+.empty-heart {
+  color: grey;
+}
+.full-heart {
+  display: none;
+}
+
+.heart-icon {
+  transition: color 0.3s;
+
+  &:hover {
+    .empty-heart {
+      display: none;
+      height: 32px;
+    }
+
+    .full-heart {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 32px;
+      animation: color-animation-heart 0.3s forwards;
+    }
+  }
+}
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -93,11 +161,10 @@ header {
     margin-top: 15px;
     border: none;
     @include box-shadow(0 4px 4px 0 rgba(0, 0, 0, 0.2));
+    &:hover {
+      animation: button-animation 0.4s forwards;
+    }
   }
-
-  /*.hero__button:hover {
-    background: linear-gradient(360deg, #ff79da, #9356dc);
-  }*/
 }
 
 .fonctionnement {
