--- a/sass/menu.css
+++ b/sass/menu.css
@@ -54,6 +54,74 @@ header {
   padding-right: 10px;
 }
 
+@keyframes color-animation-heart {
+  0% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.15;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+  }
+  50% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 0.5;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+    animation-timing-function: cubic-bezier(0.27, 0.68, 0.84, 0.08);
+  }
+  100% {
+    background: linear-gradient(180deg, #9356dc, #ff79da);
+    opacity: 1;
+    -webkit-background-clip: text;
+            background-clip: text;
+    color: transparent;
+  }
+}
+@keyframes button-animation {
+  0% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.925;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    transform: scale(1.0125);
+    animation-timing-function: cubic-bezier(0.15, 1.14, 0.5, 0.15);
+  }
+  100% {
+    background: linear-gradient(360deg, #9356dc, #ff79da);
+    opacity: 0.8;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+    /*animation-duration: 2s;*/
+    transform: scale(1.025);
+  }
+}
+.empty-heart {
+  color: grey;
+}
+
+.full-heart {
+  display: none;
+}
+
+.heart-icon {
+  transition: color 0.3s;
+}
+.heart-icon:hover .empty-heart {
+  display: none;
+  height: 32px;
+}
+.heart-icon:hover .full-heart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  animation: color-animation-heart 0.3s forwards;
+}
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -63,9 +131,6 @@ header {
   background-color: #f7f7f7;
   opacity: 0.8;
   padding-bottom: 50px;
-  /*.hero__button:hover {
-    background: linear-gradient(360deg, #ff79da, #9356dc);
-  }*/
 }
 .hero p {
   max-width: 315px;
@@ -85,14 +150,14 @@ header {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
 }
 .hero__button:hover {
-  animation: button-animation 1s ease-in-out infinite;
+  animation: button-animation 0.4s forwards;
 }
 
 .fonctionnement {
   padding: 55px 0;
 }
 .fonctionnement h2 {
-  margin: 0;
+  margin: 0 0 0 13px;
 }
 
 .fonctionnement__bar {
@@ -145,11 +210,11 @@ header {
   /*height: 1058px;*/
   padding-bottom: 40px;
 }
-.restaurants .restaurants__title {
+.restaurants__title {
   width: 100%;
   margin-top: 50px;
 }
-.restaurants .restaurants__title h2 {
+.restaurants__title h2 {
   padding: 0 20px;
   margin: 1px 0;
 }
@@ -213,6 +278,7 @@ footer h2 {
   font-style: italic;
   font-size: 18px;
   color: white;
+  margin-left: 18px;
 }
 footer ul {
   margin: 0 0 10px 0;
@@ -231,6 +297,119 @@ footer ul li .space-list-2 {
   padding-right: 10px;
 }
 
+@media (min-width: 1440px) {
+  .main__container {
+    max-width: 1440px;
+  }
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 146px;
+    background-color: #ffffff;
+  }
+  .header--logo {
+    height: 63px;
+  }
+  .header--logo img {
+    position: relative;
+    width: 197px;
+    height: 36px;
+    top: 28px;
+  }
+  .hero h1 {
+    max-width: 645px;
+  }
+  .hero p {
+    max-width: 645px;
+  }
+  .fonctionnement h2 {
+    margin: 0 0 0 60px;
+  }
+  .fonctionnement__bar ol {
+    display: flex;
+    justify-content: space-between;
+  }
+  .fonctionnement__bar ol li {
+    width: 30%;
+  }
+  .fonctionnement__bar ol i {
+    position: relative;
+    right: 20px;
+  }
+  .fonctionnement__bar ol p {
+    right: 104px;
+  }
+  .restaurants__title {
+    width: 78%;
+    margin-top: 50px;
+    margin-bottom: 5px;
+  }
+  .restaurants__title h2 {
+    padding: 0 20px;
+    margin: 1px 0;
+  }
+  .restaurants__choice img {
+    width: 498px;
+  }
+  .restaurants__choice__box__card {
+    margin-bottom: 40px;
+  }
+  .restaurants__choice__box--1, .restaurants__choice__box--2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 1080px;
+  }
+  .new__restaurants {
+    top: 35px;
+    left: 405px;
+  }
+  .new__restaurants-2 {
+    top: 35px;
+    left: 905px;
+  }
+  footer {
+    height: 114px;
+    align-items: flex-end;
+  }
+  footer h2 {
+    font-family: "Shrikhand", sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    color: white;
+    padding: 0 70px;
+    margin-bottom: 25px;
+  }
+  footer ul {
+    margin: 0;
+    /*gap: 50px;*/
+    margin-bottom: 22px;
+  }
+  footer .footer__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    /*margin: 0 0 10px 0;*/
+    padding: 0 20px;
+    list-style: none;
+    width: 100%;
+    color: white;
+    gap: 5px;
+  }
+  footer .footer__list li {
+    padding: 5px 15px;
+  }
+  footer .footer__list li .space-list {
+    padding-right: 15px;
+  }
+  footer .footer__list li .space-list-2 {
+    padding-right: 10px;
+  }
+}
 header {
   display: flex;
   flex-direction: row;
@@ -581,8 +760,8 @@ main {
   display: flex;
   justify-content: center;
   /*margin-bottom: 40px;*/
-  position: relative;
-  bottom: 45px;
+  /*position: relative;
+  bottom: 45px;*/
 }
 .entries__btn__btn {
   width: 186px;
@@ -606,4 +785,183 @@ main {
   height: 275px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+@media (min-width: 1440px) {
+  main {
+    background-color: #ffffff;
+  }
+  .main-container {
+    width: 1440px;
+  }
+  .bg-size {
+    height: 1215px;
+  }
+  .menu__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #eaeaea;
+    max-width: 1055px;
+    height: 1220px;
+    margin: auto;
+    bottom: 30px;
+    padding: 12px;
+  }
+  .menu__content__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+  }
+  .menu__content__title h1 {
+    font-family: "shrikhand", sans-serif;
+    font-weight: 400;
+  }
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 96px;
+    background-color: #ffffff;
+  }
+  header .go__back {
+    width: 30px;
+    margin-left: 20px;
+  }
+  header .header--logo {
+    position: relative;
+    top: -15px;
+    right: 636px;
+  }
+  .menu__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 383px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .entries,
+  .plats,
+  .desserts {
+    width: 634px;
+  }
+  .entries ul,
+  .plats ul,
+  .desserts ul {
+    list-style: none;
+    padding: 0;
+  }
+  .entries ul li,
+  .plats ul li,
+  .desserts ul li {
+    background-color: #ffffff;
+    border-radius: 15px;
+    color: black;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+  }
+  .entries__title span,
+  .plats__title span,
+  .desserts__title span {
+    padding-bottom: 5px;
+    border-bottom: 3px solid #99e2d0;
+  }
+  .entries__title,
+  .plats__title,
+  .desserts__title {
+    font-weight: 300;
+    font-size: 16px;
+  }
+  .entries__list__card,
+  .plats__list__card,
+  .desserts__list__card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    /*background-color: $color-primary;*/
+    padding-left: 13px;
+    /*padding: 13px 9px;*/
+    height: 69px;
+    /*transform-origin: left 20%;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+  }
+  .entries__list__card__txt,
+  .plats__list__card__txt,
+  .desserts__list__card__txt {
+    display: grid;
+    gap: 5px;
+    /*width: 287px;*/
+  }
+  .entries__list__card__txt .entries__list__card__title,
+  .entries__list__card__txt .plats__list__card__title,
+  .entries__list__card__txt .desserts__list__card__title,
+  .entries__list__card__txt .entries__list__card__subtitle,
+  .entries__list__card__txt .plats__list__card__subtitle,
+  .entries__list__card__txt .desserts__list__card__subtitle,
+  .plats__list__card__txt .entries__list__card__title,
+  .plats__list__card__txt .plats__list__card__title,
+  .plats__list__card__txt .desserts__list__card__title,
+  .plats__list__card__txt .entries__list__card__subtitle,
+  .plats__list__card__txt .plats__list__card__subtitle,
+  .plats__list__card__txt .desserts__list__card__subtitle,
+  .desserts__list__card__txt .entries__list__card__title,
+  .desserts__list__card__txt .plats__list__card__title,
+  .desserts__list__card__txt .desserts__list__card__title,
+  .desserts__list__card__txt .entries__list__card__subtitle,
+  .desserts__list__card__txt .plats__list__card__subtitle,
+  .desserts__list__card__txt .desserts__list__card__subtitle {
+    overflow: unset;
+    text-overflow: unset;
+  }
+  .entries .checkbox-label,
+  .plats .checkbox-label,
+  .desserts .checkbox-label {
+    left: 798px;
+  }
+  footer {
+    height: 114px;
+    align-items: flex-end;
+  }
+  footer h2 {
+    font-family: "Shrikhand", sans-serif;
+    font-style: italic;
+    font-size: 18px;
+    color: white;
+    padding: 0 50px;
+    margin-bottom: 25px;
+    margin-left: 0;
+  }
+  footer ul {
+    margin: 0;
+    /*gap: 50px;*/
+    display: flex;
+    justify-content: flex-end;
+    /*margin-bottom: 22px;*/
+  }
+  footer .footer__list {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+    /*margin: 0 0 10px 0;*/
+    padding: 0 20px;
+    list-style: none;
+    width: 100%;
+    color: white;
+    gap: 5px;
+  }
+  footer .footer__list li {
+    padding: 5px 15px;
+  }
+  footer .footer__list li .space-list {
+    padding-right: 15px;
+  }
+  footer .footer__list li .space-list-2 {
+    padding-right: 10px;
+  }
 }/*# sourceMappingURL=menu.css.map */
