--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,3 +1,4 @@
+@import "styles.scss";
 header {
   display: flex;
   flex-direction: row;
@@ -288,8 +289,8 @@ main {
   display: flex;
   justify-content: center;
   /*margin-bottom: 40px;*/
-  position: relative;
-  bottom: 45px;
+  /*position: relative;
+  bottom: 45px;*/
   &__btn {
     width: 186px;
     height: 50px;
@@ -312,4 +313,164 @@ main {
   width: 100%;
   height: 275px;
   object-fit: cover;
+}
+
+@media (min-width: 1440px) {
+  main {
+    background-color: #ffffff;
+  }
+  .main-container {
+    width: 1440px;
+  }
+
+  .bg-size {
+    height: 1215px;
+  }
+
+  .menu__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: $color-grey;
+    max-width: 1055px;
+    height: 1220px;
+    margin: auto;
+    bottom: 30px;
+    padding: 12px;
+    &__title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      h1 {
+        font-family: "shrikhand", sans-serif;
+        font-weight: 400;
+      }
+    }
+  }
+
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 96px;
+    background-color: #ffffff;
+    .go__back {
+      width: 30px;
+      margin-left: 20px;
+    }
+    .header--logo {
+      position: relative;
+      top: -15px;
+      right: 636px;
+    }
+  }
+
+  .menu__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 383px;
+    object-fit: cover;
+  }
+  .entries,
+  .plats,
+  .desserts {
+    width: 634px;
+    ul {
+      list-style: none;
+      padding: 0;
+      li {
+        background-color: $color-grey-2;
+        border-radius: 15px;
+        color: black;
+        @include box-shadow(0 2px 2px 0 rgba(0, 0, 0, 0.1));
+      }
+    }
+    &__title span {
+      padding-bottom: 5px;
+      border-bottom: 3px solid $color-tertiary;
+    }
+
+    &__title {
+      font-weight: 300;
+      font-size: 16px;
+    }
+
+    &__list__card {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 12px;
+      /*background-color: $color-primary;*/
+      padding-left: 13px;
+      /*padding: 13px 9px;*/
+      height: 69px;
+      /*transform-origin: left 20%;
+      transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);*/
+      &__txt {
+        display: grid;
+        gap: 5px;
+        /*width: 287px;*/
+        .entries__list__card__title,
+        .plats__list__card__title,
+        .desserts__list__card__title,
+        .entries__list__card__subtitle,
+        .plats__list__card__subtitle,
+        .desserts__list__card__subtitle {
+          overflow: unset;
+          text-overflow: unset;
+        }
+      }
+    }
+
+    .checkbox-label {
+      left: 798px;
+    }
+  }
+
+  footer {
+    height: 114px;
+    align-items: flex-end;
+    h2 {
+      font-family: "Shrikhand", sans-serif;
+      font-style: italic;
+      font-size: 18px;
+      color: white;
+      padding: 0 50px;
+      margin-bottom: 25px;
+      margin-left: 0;
+    }
+    ul {
+      margin: 0;
+      /*gap: 50px;*/
+      display: flex;
+      justify-content: flex-end;
+      /*margin-bottom: 22px;*/
+    }
+    .footer__list {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      align-items: center;
+      /*margin: 0 0 10px 0;*/
+      padding: 0 20px;
+      list-style: none;
+      width: 100%;
+      color: white;
+      gap: 5px;
+      li {
+        padding: 5px 15px;
+        .space-list {
+          padding-right: 15px;
+        }
+        .space-list-2 {
+          padding-right: 10px;
+        }
+      }
+    }
+  }
 }
