--- a/sass/menu.css
+++ b/sass/menu.css
@@ -297,6 +297,45 @@ footer ul li .space-list-2 {
   padding-right: 10px;
 }
 
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.hidden__page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ffffff;
+  z-index: 9999;
+  animation: fadeOut 0.2s linear 1s forwards;
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @media (min-width: 1440px) {
   .main__container {
     max-width: 1440px;
@@ -380,17 +419,20 @@ footer ul li .space-list-2 {
     font-style: italic;
     font-size: 18px;
     color: white;
-    padding: 0 70px;
+    padding: 0 50px;
     margin-bottom: 25px;
+    margin-left: 0;
   }
   footer ul {
     margin: 0;
     /*gap: 50px;*/
-    margin-bottom: 22px;
+    display: flex;
+    justify-content: flex-end;
+    /*margin-bottom: 22px;*/
   }
   footer .footer__list {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: flex-end;
     align-items: center;
     /*margin: 0 0 10px 0;*/
@@ -417,6 +459,7 @@ header {
   align-items: center;
   height: 63px;
   background-color: #ffffff;
+  /*animation: fadeInUp 1s cubic-bezier(0.32, 0.13, 0.29, 1) forwards;*/
 }
 header .go__back {
   width: 30px;
@@ -430,6 +473,7 @@ header .header--logo {
 
 main {
   background-color: #eaeaea;
+  /*animation: fadeIn 1s ease 2s forwards;*/
 }
 
 .menu__content {
@@ -438,15 +482,40 @@ main {
   position: relative;
   bottom: 60px;
   padding: 10px;
+  /*animation: fadeInUp 2s cubic-bezier(0.32, 0.13, 0.29, 1) 1.5s forwards;*/
 }
 .menu__content__title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /*animation: fadeInUp 0.5s cubic-bezier(0.32, 0.13, 0.29, 1) forwards;*/
 }
 .menu__content__title h1 {
   font-family: "shrikhand", sans-serif;
   font-weight: 400;
+}
+
+.menu__img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 275px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  /*animation: fadeInUp 1.5s cubic-bezier(0.32, 0.13, 0.29, 1) 0.5s forwards;*/
+}
+
+.entries {
+  animation: fadeInUp 1s cubic-bezier(0.32, 0.13, 0.29, 1) forwards;
+}
+
+.plats {
+  animation: fadeInUp 1.5s cubic-bezier(0.32, 0.13, 0.29, 1) 0.5s forwards;
+}
+
+.desserts {
+  animation: fadeInUp 2s cubic-bezier(0.32, 0.13, 0.29, 1) 1s forwards;
 }
 
 .entries ul,
@@ -519,7 +588,7 @@ main {
 .plats__list__card .checkbox-label,
 .desserts__list__card .checkbox-label {
   position: absolute;
-  left: 306px;
+  left: 297px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -777,14 +846,18 @@ main {
   cursor: pointer;
 }
 
-.menu__img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 275px;
-  -o-object-fit: cover;
-     object-fit: cover;
+@keyframes fadeInUp {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+.fadeInUp-animation {
+  animation: fadeInUp 1s;
 }
 
 @media (min-width: 1440px) {
@@ -921,7 +994,7 @@ main {
   .entries .checkbox-label,
   .plats .checkbox-label,
   .desserts .checkbox-label {
-    left: 798px;
+    left: 575px;
   }
   footer {
     height: 114px;
